--- a/src/app/profil-detail/profil-detail.component.html
+++ b/src/app/profil-detail/profil-detail.component.html
@@ -9,7 +9,7 @@
     <!-- En-tête du profil -->
     <div class="profil-header">
       <div class="profil-photo-large">
-        <img [src]="user.photoBase64 || 'assets/default-avatar.png'" alt="Photo de profil">
+        <img [src]="user.photoBase64 || 'assets/patient.png'" alt="Photo de profil">
       </div>
       <h2>{{ user.prenom }} {{ user.nom }}</h2>
       <p class="profil-type">
